bad/var_decl_init_invalid_conversion_class_int.example_compiler_output
ERROR
[1mbad/var_decl_init_invalid_conversion_class_int.lat:5:6: [1;31merror: [0;1mincompatible types: cannot assign variable of type `Y` with an expression of type `int`[m
	Y x = 42;
	    [1;32m^[m
